--- a/package.json
+++ b/package.json
@@ -8,20 +8,33 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@styled-icons/evaicons-outline": "^10.34.0",
+    "graphql": "^15.6.1",
+    "graphql-request": "^3.6.1",
+    "leaflet": "^1.7.1",
     "next": "11.1.0",
     "next-pwa": "^5.3.1",
+    "next-seo": "^4.28.1",
+    "nextjs-progressbar": "^0.0.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-leaflet": "^3.2.2",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.15.0",
+    "@graphql-codegen/add": "^3.1.0",
+    "@graphql-codegen/cli": "2.2.1",
+    "@graphql-codegen/typescript": "2.2.4",
+    "@graphql-codegen/typescript-operations": "2.1.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^27.0.1",
+    "@types/leaflet": "^1.7.5",
     "@types/node": "^16.6.1",
     "@types/react": "17.0.18",
     "@types/styled-components": "^5.1.13",
